# flowerjuce

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  DEVELOPER.md  README.md  TODO.md
apps/: CMakeLists.txt
apps/basic/: CMakeLists.txt  LooperTrack.cpp  LooperTrack.h  Main.cpp  MainComponent.cpp  MainComponent.h
apps/claptext2sound/: CMakeLists.txt  LooperTrack.cpp  Main.cpp  MainComponent.cpp  MainComponent.h  StartupDialog.cpp  StartupDialog.h
apps/claptext2sound/CLAP/: CLAPSearchWorkerThread.cpp  CLAPSearchWorkerThread.h  ONNXModelManager.cpp  ONNXModelManager.h  PaletteCreationProgressWindow.h  PaletteCreationWorkerThread.h  RobertaTokenizer.cpp  RobertaTokenizer.h  SoundPaletteCreator.cpp  SoundPaletteCreator.h  SoundPaletteManager.cpp
apps/cleatpinknoisetest/: CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h
apps/embeddingsampler/: CMakeLists.txt  ColorPalette.cpp  ColorPalette.h  DBScan.cpp  DBScan.h  EmbeddingSpaceView.cpp  EmbeddingSpaceView.h  LooperTrack.cpp  LooperTrack.h  Main.cpp  MainComponent.cpp  MainComponent.h  SamplerAudioProcessor.cpp  SamplerAudioProcessor.h  SamplerTrack.cpp  SamplerTrack.h  SamplerVoice.cpp  SamplerVoice.h  StartupDialog.cpp  StartupDialog.h
apps/embeddingsampler/CLAP/: CLAPSearchWorkerThread.cpp  CLAPSearchWorkerThread.h  ONNXModelManager.cpp  ONNXModelManager.h  PaletteCreationProgressWindow.cpp  PaletteCreationProgressWindow.h  PaletteCreationWorkerThread.h  PaletteVisualization.cpp  PaletteVisualization.h  STFTFeatureExtractor.cpp  STFTFeatureExtractor.h  SoundPaletteCreator.cpp  SoundPaletteCreator.h  SoundPaletteManager.cpp  SoundPaletteManager.h
apps/embeddingsampler/assets/: roberta_merges.json
apps/layercake/: CMakeLists.txt  KnobRecorderButton.cpp  LayerCakeDisplay.cpp  LayerCakeDisplay.h  LayerCakeKnob.cpp  LayerCakeKnob.h  LayerCakeLfoWidget.cpp  LayerCakeLfoWidget.h  LayerCakeLibraryManager.cpp  LayerCakeLibraryManager.h  LayerCakeLookAndFeel.cpp  LayerCakeLookAndFeel.h  LfoAssignmentButton.cpp  LfoAssignmentButton.h  LfoDragHelpers.h  LibraryBrowserWindow.cpp  LibraryBrowserWindow.h  Main.cpp  MainComponent.cpp  MainComponent.h  README.md  StartupDialog.cpp  StartupDialog.h
apps/layercake/core/: KnobRecorderButton.h  LayerCakeComponent.cpp  LayerCakeComponent.h  LayerCakeDisplay.cpp  LayerCakeDisplay.h  LayerCakeLibraryManager.cpp  LayerCakeLibraryManager.h  LayerCakeLookAndFeel.cpp  LayerCakeProcessor.cpp  LayerCakeProcessor.h  LayerCakeSettings.h  LibraryBrowserWindow.cpp
apps/layercake/focus/: FocusableTarget.h
apps/layercake/input/: KeyboardCommandRouter.cpp  TapTempoController.h
apps/layercake/lfo/: LayerCakeLfoWidget.cpp  LayerCakeLfoWidget.h  LfoAssignmentButton.cpp  LfoAssignmentButton.h  LfoConnectionOverlay.cpp  LfoConnectionOverlay.h  LfoDragHelpers.h  LfoTriggerButton.cpp  LfoTriggerButton.h
apps/layercake/plugin/: Main.cpp
apps/layercake/standalone/: Main.cpp  StandaloneSettings.h
apps/layercake/ui/: HelpOverlay.cpp  StatusHUDComponent.cpp  StatusHUDComponent.h
apps/test_audio_io_delay/: CMakeLists.txt  README.md
apps/test_audio_io_delay/LatencyMeasurementApp/: CMakeLists.txt  LatencyMeasurementEngine.cpp  LatencyMeasurementEngine.h  Main.cpp  MainComponent.cpp  MainComponent.h  StartupDialog.cpp  StartupDialog.h  SweepGenerator.cpp  SweepGenerator.h
apps/text2sound4all/: CMakeLists.txt  LooperTrack.cpp  LooperTrack.h  Main.cpp  MainComponent.cpp  MainComponent.h  README.md  StartupDialog.cpp  VizWindow.cpp  VizWindow.h
apps/unsound4all/: CMakeLists.txt  LooperTrack.cpp  LooperTrack.h.tmp  Main.cpp  MainComponent.cpp  MainComponent.h  StartupDialog.cpp  StartupDialog.h
apps/unsound4all/CLAP/: CLAPSearchWorkerThread.cpp  CLAPSearchWorkerThread.h  ONNXModelManager.cpp  PaletteCreationWorkerThread.h  RobertaTokenizer.cpp  RobertaTokenizer.h  SoundPaletteCreator.cpp  SoundPaletteCreator.h  SoundPaletteManager.cpp
apps/unsound4all/assets/: clap_audio_encoder.onnx  clap_audio_encoder.onnx.data  clap_text_encoder.onnx  clap_text_encoder.onnx.data  roberta_special_tokens.json  roberta_vocab.json
apps/vampnet/: CMakeLists.txt  LooperTrack.cpp  LooperTrack.h  Main.cpp  MainComponent.cpp  MainComponent.h
apps/wham/: CMakeLists.txt  LooperTrack.cpp  LooperTrack.h  Main.cpp  MainComponent.cpp  MainComponent.h  StartupDialog.h  TokenVisualizer.cpp  TokenVisualizer.h
libs/flowerjuce/: CMakeLists.txt  ClickSynth.cpp  ClickSynth.h  CustomLookAndFeel.h  Sampler.cpp  Sampler.h
libs/flowerjuce/Components/: AudioInfoDisplay.h  ConfigManager.cpp  ConfigManager.h  DualWaveformDisplay.cpp  DualWaveformDisplay.h  GradioUtilities.cpp  GradioUtilities.h  InputSelector.cpp  InputSelector.h  LevelControl.cpp  LevelControl.h  MidiLearnComponent.h  MidiLearnManager.cpp  MidiLearnManager.h  ModelParameterDialog.h  MultiChannelMeter.cpp  MultiChannelMeter.h  OutputSelector.cpp  OutputSelector.h  ParameterKnobs.cpp  ParameterKnobs.h  SettingsDialog.h  SinksWindow.cpp  SinksWindow.h  TransportControls.cpp  TransportControls.h  VariationSelector.cpp  VariationSelector.h  WaveformDisplay.cpp  WaveformDisplay.h
libs/flowerjuce/DSP/: KnobSweepRecorder.cpp  KnobSweepRecorder.h  LfoUGen.cpp  LfoUGen.h  LowPassFilter.cpp  LowPassFilter.h  MultiChannelLoudnessMeter.cpp  MultiChannelLoudnessMeter.h  OnsetDetector.cpp  OnsetDetector.h  PeakMeter.cpp  PeakMeter.h
libs/flowerjuce/Debug/: DebugAudioRate.h
libs/flowerjuce/Engine/: LooperReadHead.cpp  LooperReadHead.h  LooperTrackEngine.cpp  LooperTrackEngine.h  LooperWriteHead.cpp  LooperWriteHead.h  MultiTrackLooperEngine.h  TapeLoop.cpp  VampNetTrackEngine.cpp  VampNetTrackEngine.h
libs/flowerjuce/GradioClient/: GradioClient.cpp  GradioClient.h
libs/flowerjuce/LayerCakeEngine/: GrainVoice.cpp  GrainVoice.h  LayerCakeEngine.cpp  LayerCakeEngine.h  Metro.cpp  (+6 more)
plugins/cleatpanner/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: CMakeLists.txt  LfoTests.cpp  PannerTests.cpp  TestUtils.h  run_lfo_tests.sh  run_panner_tests.sh
tests/scripts/: plot_lfo_tests.py  plot_panner_tests.py
(+94 files in other folders)
